[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat_time"
dynamic = [
  "version",
]
dependencies = [
  "torch>=2.1,<2.5",
  "transformers>=4.47.1",
  "lightning>=2.0",
  "numpy~=1.26.0",
  "scikit-learn>=1.6.0",
  "scipy~=1.11.3",
]
requires-python = ">=3.10"
authors = [
  {name = "Chengsen Wang", email = "cswang@bupt.edu.cn"},
  {name = "Qi Qi"},
  {name = "Jingyu Wang"},
  {name = "Haifeng Sun"},
  {name = "Zirui Zhuang"},
  {name = "Jinming Wu"},
  {name = "Lei Zhang"},
  {name = "Jianxin Liao"}
]
maintainers = [
  {name = "cswang", email = "cswang@bupt.edu.cn"}
]
description = "ChatTime: A Multimodal Time Series Foundation Model"
readme = "README.md"
keywords = ["Time Series Forecasting", "Transformer", "Deep Learning", "PyTorch"]
classifiers = [
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.hatch.version]
path = "src/chat_time/__about__.py"

[tool.hatch.build]
packages = ["src/chat_time"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]